spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ h1 {
 }
 
 h2 {
+    padding: 1rem 0 0;
     font-size: 2rem;
     font-weight: 400;
     @include tablet {
