--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -16,9 +16,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    padding: 0 1rem 1rem 1rem;
     @include tablet {
-        margin-top: 2rem;
         font-size: 2rem;
         align-items: center;
         justify-content: center;
@@ -32,8 +31,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
-        padding: 3rem;
+        justify-content: space-between;
+        padding: 0 3rem 3rem 5rem;
         margin: 0;
         iframe {
             width: 400px;
