--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -9,7 +9,7 @@
     height: max-content;
     display: flex;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 0 1rem 1rem;
     justify-content: space-evenly;
   }
   @include desktop {
