--- a/src/components/Testemonials/Testemonials.scss
+++ b/src/components/Testemonials/Testemonials.scss
@@ -9,6 +9,10 @@
   &__heading {
     text-align: center;
     padding: 1rem;
+    @include desktop {
+      text-align: left;
+      padding: 0 5rem;
+    }
   }
   &__gallery {
     text-align: center;
@@ -55,5 +59,12 @@
   &__name {
     font-weight: 400;
     color: black;
+  }
+}
+
+.sk-ww-google-reviews {
+  padding: 0.5rem;
+  @include desktop {
+    padding: 0 4.5rem;
   }
 }
